--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,10 @@
     </div>
 </footer>
 
-<script src="{{ site.baseurl }}/js/vendor/jquery.js"></script>
-<script src="{{ site.baseurl }}/js/vendor/waypoints.min.js"></script>
-<script src="{{ site.baseurl }}/js/foundation/foundation.min.js"></script>
-<script src="{{ site.baseurl }}/js/foundation/foundation.interchange.js"></script>
-<script src="{{ site.baseurl }}/js/functions.js"></script>
+<!--[if gt IE 8]><!-->
+    <script src="{{ site.baseurl }}/js/vendor/jquery.js"></script>
+    <script src="{{ site.baseurl }}/js/vendor/waypoints.min.js"></script>
+    <script src="{{ site.baseurl }}/js/foundation/foundation.min.js"></script>
+    <script src="{{ site.baseurl }}/js/foundation/foundation.interchange.js"></script>
+    <script src="{{ site.baseurl }}/js/functions.js"></script>
+<!--<![endif]-->
