--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="medium-12 columns text-center">
             <div style="height: 193px;">
-                <img class="pad-top-25" width="190" height="190" data-interchange="[{{ site.baseurl }}/img/hero_tmp.png, (default)], [{{ site.baseurl }}/img/hero_tmp@2x.png, (retina)]">
+                <img class="pad-top-25" width="190" height="190" src="{{ site.baseurl }}/img/hero_tmp.png" data-interchange="[{{ site.baseurl }}/img/hero_tmp.png, (default)], [{{ site.baseurl }}/img/hero_tmp@2x.png, (retina)]">
                 <noscript><img class="pad-top-25" width="190" height="190" src="{{ site.baseurl }}/img/hero_tmp.png" /></noscript>
             </div>
         </div>
