--- a/_includes/top.html
+++ b/_includes/top.html
@@ -20,7 +20,9 @@
         <script src="{{ site.baseurl }}/js/vendor/modernizr.js"></script>
 
         <!-- fonts from the goog -->
+        <!--[if gt IE 8]><!-->
         <link href='http://fonts.googleapis.com/css?family=Exo+2:400,400italic,200,700,700italic' rel='stylesheet' type='text/css'>
+        <!--<![endif]-->
 
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
