--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
+        <title>T3 JavaScript Framework - {{ page.title }}</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
